# telepathy-bot

./: .gitignore  Makefile.am  README  config.h.in  configure.ac  configure.scan  run.sh
src/: Makefile.am  telepath-bot_poc.c  telepathy-bot.c  telepathy-bot.h  tp_bot-account.c  tp_bot-account.h  tp_bot-bot.c  tp_bot-bot.h  tp_bot-config.c  tp_bot-config.h  tp_bot-handler.c  tp_bot-handler.h  tp_bot-signal_handler.c  tp_bot-signal_handler.h  tp_bot-socket.c  tp_bot-socket.h
